tests/ui/wrong-type-span.stderr
error[E0308]: mismatched types
 --> $DIR/wrong-type-span.rs:6:20
  |
6 |     quote_spanned!(span=> #x);
  |                    ^^^^ expected struct `proc_macro2::Span`, found &str
  |
  = note: expected type `proc_macro2::Span`
             found type `&str`

For more information about this error, try `rustc --explain E0308`.
